# SlicerAblationPlanner

./: AblationPlanner.s4ext  CMakeLists.txt  README.md  license.txt
AblationPlanner/: AblationPlanner.py  AblationPlanner.s4ext  AblationPlannerS4EXT.txt  CMakeLists.txt
AblationPlanner/Resources/UI/: AblationPlanner.ui  AblationPlanner_old.ui
AblationPlanner/Testing/: Endpoints.mrk.json  Endpoints_1.mrk.json  tumor.seg.nrrd
